--- a/test/storybook/docs/.ai/testing/overview.mdx
+++ b/test/storybook/docs/.ai/testing/overview.mdx
@@ -88,7 +88,8 @@ See also: Example Prompts at `.ai/testing/AGENT_PROMPTS.md`.
 - Target a specific spec/glob: `npm run run-component-tests:spec -- ./state/**/*.test.tsx`
 - Run a specific coverage script (e.g., prop): `npm run coverage-prop`
 - Run a specific coverage script (e.g., listen): `npm run coverage-listen`
-- Run a specific coverage script (e.g., state): `npm run coverage-state`
+- Run a specific coverage script (e.g., state): `npm run state:coverage`
+- Run a specific coverage script (e.g., component): `npm run component:coverage`
 - Run a specific coverage script (e.g., event): `npm run coverage-event`
 
 **Best Practice:**
