--- a/test/storybook/docs/Testing/Decorators/Component/@Component.mdx
+++ b/test/storybook/docs/Testing/Decorators/Component/@Component.mdx
@@ -91,3 +91,42 @@ Rule: `shadow` and `scoped` are mutually exclusive and never both `true`.
     </tbody>
   </table>
 </div>
+
+## Test Case Summary
+
+Planned WDIO tests will exercise representative permutations of the `@Component` matrix. Until then, this section serves as a placeholder for the shared summary format.
+
+<div style={{ maxWidth: '100%', width: '100%', background: '#fff' }}>
+  <table style={{ width: '100%', borderCollapse: 'collapse' }}>
+    <colgroup>
+      <col style={{ width: '55%' }} />
+      <col style={{ width: '20%' }} />
+      <col style={{ width: '10%' }} />
+      <col style={{ width: '15%' }} />
+    </colgroup>
+    <thead>
+      <tr style={{ background: '#f2f2f2' }}>
+        <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Test Case</th>
+        <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Permutations Covered</th>
+        <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>Status</th>
+        <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Test Folder</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+          Component renders correctly with mode‑specific styles and assets.
+        </td>
+        <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+          Representative across shadow | scoped | light
+        </td>
+        <td style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>
+          <span style={{ color: '#999' }}>—</span>
+        </td>
+        <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+          <code>test/wdio/component-decorator</code>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
