--- a/test/storybook/docs/.ai/testing/coverage-matrix/generation.mdx
+++ b/test/storybook/docs/.ai/testing/coverage-matrix/generation.mdx
@@ -27,7 +27,7 @@ These CSS files live in `test/wdio/component-decorator/matrix/` and are shared b
 
 ## Generator Behavior
 
-- Script: `Testing/Decorators/generate-missing-components.js`
+- Script: `Testing/Decorators/Component/generate-components.js`
 - Emission folder: `test/wdio/component-decorator/matrix/`
 - Filename prefix: `cmp-`
 - Imports: `import { Component, h } from '@stencil/core'`
@@ -38,14 +38,14 @@ These CSS files live in `test/wdio/component-decorator/matrix/` and are shared b
 From `test/storybook/docs/.ai/testing`:
 
 1) Compute coverage and write JSON artifacts
-- `npm run refresh-coverage-matrix` → updates `Testing/Decorators/*-coverage-data.json` including `component-coverage-data.json`.
+- `npm run refresh-coverage-matrix` → updates per-decorator coverage data including `Testing/Decorators/Component/coverage-data.json`.
 - Shortcut: `npm run coverage-loop` runs steps 1–3 in one go.
 
 2) Generate any missing `@Component` permutations
-- `npm run generate-missing-components` → creates components under `matrix/` as needed.
+- `npm run component:generate-components` → creates components under `matrix/` as needed.
 
 3) Re-run coverage and verify 100%
-- `npm run refresh-coverage-matrix` → expect `covered === total` for `component-coverage-data.json`.
+- `npm run refresh-coverage-matrix` → expect `covered === total` for `Component/coverage-data.json`.
 
 4) Build WDIO components
 - `npm run build-wdio-components` → builds `test/wdio` using the repository scripts.
@@ -61,7 +61,7 @@ From `test/storybook/docs/.ai/testing`:
 ## Verification and Guardrails
 
 - Coverage target: 100% across valid permutations (excludes `shadow:true + scoped:true`).
-- File count parity: The total `.tsx` files under `test/wdio/component-decorator/**` must equal the `covered` count recorded in `component-coverage-data.json`.
+- File count parity: The total `.tsx` files under `test/wdio/component-decorator/**` must equal the `covered` count recorded in `Component/coverage-data.json`.
 - Style exclusivity audit: If coverage drops unexpectedly, search for components that set multiple of `styleUrl|styleUrls|styles` and fix them.
 
 ## Portability Notes
