--- a/test/storybook/docs/Testing/Decorators/State/@State.mdx
+++ b/test/storybook/docs/Testing/Decorators/State/@State.mdx
@@ -100,3 +100,56 @@ The following table summarizes the actual component-level WDIO test cases for th
   </table>
 </div>
 
+## Test Case Summary
+
+The following table summarizes the WDIO component tests that exercise the `@State` decorator across types and default-value cases.
+
+<div style={{ maxWidth: '100%', width: '100%', background: '#fff' }}>
+  <table style={{ width: '100%', borderCollapse: 'collapse' }}>
+    <colgroup>
+      <col style={{ width: '55%' }} />
+      <col style={{ width: '20%' }} />
+      <col style={{ width: '10%' }} />
+      <col style={{ width: '15%' }} />
+    </colgroup>
+    <thead>
+      <tr style={{ background: '#f2f2f2' }}>
+        <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Test Case</th>
+        <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Permutations Covered</th>
+        <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>Status</th>
+        <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Test Folder</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+          Button click mutates a primitive <code>@State</code> value and updates DOM output.
+        </td>
+        <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+          type: string | number | boolean × default: true/false
+        </td>
+        <td style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>
+          <span style={{ color: 'green' }}>✔</span>
+        </td>
+        <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+          <code>test/wdio/state</code>
+        </td>
+      </tr>
+      <tr style={{ background: '#f9f9f9' }}>
+        <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+          Static render validation for complex types (<code>any</code>, <code>array</code>, <code>object</code>) with and without defaults.
+        </td>
+        <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+          type: any | array | object × default: true/false
+        </td>
+        <td style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>
+          <span style={{ color: 'green' }}>✔</span>
+        </td>
+        <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+          <code>test/wdio/state</code>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
