--- a/test/storybook/docs/Testing/Decorators/State/@State.mdx
+++ b/test/storybook/docs/Testing/Decorators/State/@State.mdx
@@ -68,40 +68,6 @@ To simplify navigation of the generated matrix, components are organized by stat
 
 ## Test Case Summary
 
-The following table summarizes the actual component-level WDIO test cases for the `@State` decorator:
-
-<div style={{ maxWidth: '100%', width: '100%', background: '#fff' }}>
-  <table style={{ width: '100%', borderCollapse: 'collapse' }}>
-    <colgroup>
-      <col style={{ width: '50%' }} />
-      <col style={{ width: '30%' }} />
-      <col style={{ width: '20%' }} />
-    </colgroup>
-    <thead>
-      <tr style={{ background: '#f2f2f2' }}>
-        <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Test Case</th>
-        <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Permutations Covered</th>
-        <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>Status</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td style={{ padding: '8px', border: '1px solid #ddd' }}>
-          Clicking a button updates the <code>@State</code> property and the DOM reflects the new state (e.g., selected day is highlighted).
-        </td>
-        <td style={{ padding: '8px', border: '1px solid #ddd' }}>
-          All types, with/without default value
-        </td>
-        <td style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>
-          <span style={{ color: 'green' }}>✔</span>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-
-## Test Case Summary
-
 The following table summarizes the WDIO component tests that exercise the `@State` decorator across types and default-value cases.
 
 <div style={{ maxWidth: '100%', width: '100%', background: '#fff' }}>
@@ -132,7 +98,7 @@ The following table summarizes the WDIO component tests that exercise the `@Stat
           <span style={{ color: 'green' }}>✔</span>
         </td>
         <td style={{ padding: '8px', border: '1px solid #ddd' }}>
-          <code>test/wdio/state</code>
+          <code>test/wdio/state-new/tests</code>
         </td>
       </tr>
       <tr style={{ background: '#f9f9f9' }}>
@@ -146,7 +112,7 @@ The following table summarizes the WDIO component tests that exercise the `@Stat
           <span style={{ color: 'green' }}>✔</span>
         </td>
         <td style={{ padding: '8px', border: '1px solid #ddd' }}>
-          <code>test/wdio/state</code>
+          <code>test/wdio/state-new/tests</code>
         </td>
       </tr>
     </tbody>
